- Fixed: Plot history and graphical menus broken in some cases with R 2.15.0		TODO: backport? (r4182)
- Fixed: If the rkward package was loaded in a plain R session, q() and quit() still work
- combined all Wilcoxon/Mann-Whitney-tests in one plugin (from previously two separate plugins)			TODO: adjust test(s)
- Added polyserial/polychoric correlations to correlation matrix plugin			TODO: adjust test(s)
- Added more compression options to the "Save objects as R code" plugin			TODO: adjust test(s)
- Added MacPorts support, see README.MacPorts and bundle build script in the macports folder
- Added dynamically generated table-of-contents menu to output document
- Fixed: Would not show output of system() commands to stderr on the console (on Unix-like systems)
- Allow some markup inside <text> elements in plugins, and auto-add breaks only for duplicate newlines.
- Reorganized t-test plugin, and add support for single sample t-tests			TODO: adjust test(s)
- Fixed: Function argument hints for the second half of the parameter list would not be quoted, correctly
- Improve keypress handling issues in the R Console, when the cursor or a selection is outside the editable range
- Fixed: Failure to open workspaces with non-latin1 filenames from the command line
- Fixed: Saving / restoring workplace layout would fail when saving to directories with unusual characters
- Only install translations which are at least 80% complete (not counting strings in plugins, which are not yet translatable)
- When asking for workspace file to open, use appropriate file filter
- When configured to ask for workspace to open on startup, don't prompt to save, first
- Fixed: potential crash when clicking "Select all updates" in the package installation dialog
- Fixed: potential crash in object name completion under certain conditions
- Simplified the "Sort Data" plugin, and added a help page